--- a/Readme
+++ b/Readme
@@ -3,4 +3,8 @@ This is an automation process that to push changes to IAM roles and it's related
 
 cd $workdir
 
+git checkout master  
+
 git fetch
+
+
